# backend/src/main/java/com/bfg/platform/athlete/entity/Accreditation.java
@@ -3,7 +3,6 @@ package com.bfg.platform.athlete.entity;
 import com.bfg.platform.athlete.entity.Athlete;
 import com.bfg.platform.club.entity.Club;
 import com.bfg.platform.gen.model.AccreditationStatus;
-import com.bfg.platform.gen.model.ScopeType;
 import jakarta.persistence.*;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
@@ -57,10 +56,6 @@ public class Accreditation {
     @Column(name = "year")
     private Integer year;
 
-    @Column(name = "scope_type", nullable = false)
-    @Enumerated(EnumType.STRING)
-    private ScopeType scopeType;
-
     @Column(name = "status")
     @Enumerated(EnumType.STRING)
     private AccreditationStatus status;
@@ -73,4 +68,5 @@ public class Accreditation {
     @Setter(AccessLevel.NONE)
     private Instant modifiedAt;
 }
+
 
